--- a/sections/conclusions.tex
+++ b/sections/conclusions.tex
@@ -8,5 +8,5 @@
 
 In this project we purpose to design a processes architecture for project execution and evolutive maintenance requests' management inside a Information Systems Management of an organization. This architecture will be supported by a set of artifacts and a responsibility structure. We also pretend to design a logical application architecture considering PPM and ITSM tools to support the processes architecture implementation.\par
 We analyzed COBIT, ITIL and PMBOK frameworks, considered by professionals in the area the most important on IT Governance and Management processes, with the objective to extract the most important guidances on management processes. This frameworks are complex and extensive, being necessary to consider only the processes areas that bring added-value for this project and constitute concerns for the stakeholders. We also considered a set of international standards on IT service, Risk, Information Security and Audit Management to complement our knowledge on these areas.\par
-Considering we pretend to develop a logical application architecture, we also made a state of the art in PPM and ITSM solutions available in the market, evaluated using Gartner and Forrester research methodologies. This methodologies allowed us to come with a proposal of PPM and ITSM solutions to adopt.\par
+Considering we pretend to develop a logical application architecture, we also made a state of the art in PPM and ITSM solutions available in the market, evaluated using Gartner and Forrester research methodologies. These methodologies allowed us to come with a proposal of PPM and ITSM solutions to adopt.\par
 As future work, we pretend to design the process architecture considering the processes scope presented in this project, as well as to provide a logical application architecture to support this architecture. We also want to apply this architecture to a Information Systems department of a real-case organization, demonstrating the appliance of our solution and evaluating its performance. In Appendix A.1 we present a Gantt chart with these activities scheduled in time.\par 
