--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -33,11 +33,11 @@ For quality factors, that define how can we measure the quality of our model, th
 \item \textbf{Implementability} is defined as the ease with which the data model can be implemented within the time, budget and technology constraints of the project.
 \end{itemize}
 
-For each quality factor, a set of metrics are presented for evaluation in \cite{moody1998metrics}. The objective of this metrics is to refine these quality factors in specific and concrete measures for evaluating the quality of data models.\par
+For each quality factor, a set of metrics are presented for evaluation in \cite{moody1998metrics}. The objective of these metrics is to refine these quality factors in specific and concrete measures for evaluating the quality of data models.\par
 Our objective is to use this framework on our final solution, analyzing the metrics presented in \cite{moody1998metrics} to evaluate each quality factor and how it is achieved in our solution, providing a well-defined evaluation method for this project.\par
 
 \subsection{Interviews}
 
-Interviews are an evaluation method that will provide us feedback from the organization's scenario stakeholders, defining acceptance criteria for the solution. This interviews will be made, in majority, with the objective of, after presenting a solution proposal, discuss which aspects of it are already covered and which ones need to be developed or iterated. This will allow us to apply the DSRM process, taking advantage of its iterative character to achieve a more complete solution.\par
+Interviews are an evaluation method that will provide us feedback from the organization's scenario stakeholders, defining acceptance criteria for the solution. These interviews will be made, in majority, with the objective of, after presenting a solution proposal, discuss which aspects of it are already covered and which ones need to be developed or iterated. This will allow us to apply the DSRM process, taking advantage of its iterative character to achieve a more complete solution.\par
 The objectives and expected results of each interview will be defined later, considering the project phase they are inserted, but in majority will be based on open interviews were we pretend, in closer collaboration with the stakeholders, define what is already achieved and what needs improvements with new iterations.\par  
 
