--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -9,7 +9,7 @@
 
 % Example citation:
 In this section we will present a set of literature references on the subjects related to this project. We will present the most important frameworks on Information Systems Management and Governance with the objective of coming up with a choice of a framework or a set of them to implement our processes.\par
-Our choice is centered in three frameworks we consider the most relevant for this project: COBIT 5, ITIL V3 and PMBOK. This three frameworks provide, from different perspectives, guides and principles for IT Governance and Management, presenting processes for achieving a successful implementation of this principles in an organization.
+Our choice is centered in three frameworks we consider the most relevant for this project: COBIT 5, ITIL V3 and PMBOK. These three frameworks provide, from different perspectives, guides and principles for IT Governance and Management, presenting processes for achieving a successful implementation of these principles in an organization.
 
 \subsection{IT Governance and IT Management}
 
@@ -57,7 +57,7 @@ Relating to other frameworks and standards, COBIT tries to establish a framework
 \begin{figure}[h!]
 \centering
 \includegraphics[width=0.7\textwidth]{img/COBITOtherFrameworks.png}
-\caption{COBIT 5 coverage on other frameworks. Extracted from \cite{2012cobit}.}
+\caption{COBIT 5 coverage of other frameworks. Extracted from \cite{2012cobit}.}
 \end{figure}
 
 
@@ -76,7 +76,7 @@ CMMI (Capability Maturity Model Integration), first developed at the Software En
 
 \end{itemize}
 
-For this areas of interest, CMMI defines 16 core process areas, covering processes that are fundamental to improve the organization's processes. Each one of the areas is a set of related practices that, when implemented, will achieve goals important for process improvement.\par
+For these areas of interest, CMMI defines 16 core process areas, covering processes that are fundamental to improve the organization's processes. Each one of the areas is a set of related practices that, when implemented, will achieve goals important for process improvement.\par
 CMMI supports two types of improvement paths, depending on the organization objectives. One is used for the organization to improve processes related to a specific process area, named the continuous representation, and the other one is used for organizations to improve a set of relating processes by incrementally consider sets of process areas, named the staged representation. As stated by CMMI, the continuous representation will allow to achieve maturity levels and the staged representation will achieve capability levels\par
 For the staged representation, the following capability levels are defined:
 
@@ -114,7 +114,7 @@ To conduct an CMMI appraisal, the organization must follow the appraisal require
 
 \subsubsection{CMMI importance for COBIT 5}
 
-CMMI can be used by COBIT for process improvement purposes. Considering COBIT as a framework for governance and management processes, providing guidance and control, it is fundamental for it to also consider improvement as an important part of this processes. Also, and considering COBIT application for this project, we will apply its guidance on a real-case organization, that deals with suppliers and other stakeholders, many times interested in the processes level of maturity conducted by the organization, in accordance to CMMI levels. Considering this, its fundamental for COBIT's application to consider the CMMI body of knowledge.\par
+CMMI can be used by COBIT for process improvement purposes. Considering COBIT as a framework for governance and management processes, providing guidance and control, it is fundamental for it to also consider improvement as an important part of these processes. Also, and considering COBIT application for this project, we will apply its guidance on a real-case organization, that deals with suppliers and other stakeholders, many times interested in the processes level of maturity conducted by the organization, in accordance to CMMI levels. Considering this, its fundamental for COBIT's application to consider the CMMI body of knowledge.\par
 COBIT 5 also considers CMMI as a related framework, as stated in Figure 4, and identifies, as stated in \cite{2012cobit}, that some areas and domains are covered by CMMI, namely application-building and acquisition-related processes in the Build And Acquire domain and some organizational and quality-related processes from the Acquire, Plan and Organize domain.\par
 
 
@@ -135,7 +135,7 @@ One important aspect of COBIT's use is that it provides a more business and stra
 
 First developed in the 1980s by the actual Office of Government Commerce (OGC), a branch of the British Government, ITIL defines processes for IT Service management at a high level. Each organization that intents to apply ITIL for service management should adapt and implement it in the most suitable manner to accomplish  particular objectives and needs.\cite{hill2006combine}\par
 On the last years, ITIL became an important standard worldwide for organizations as the guideline for IT service management processes. Its guidance can be used to transform service management capabilities into strategic assets, that will become fundamental to build distinctiveness to concurrency and deliver services with higher performance and costumer's satisfaction.\par
-The ITIL service management practices are comprised of three main sets of products and services. The core set, and the one we will consider for this project, consists of six publications: Introduction to ITIL Service Management Practices, Service Strategy, Service Design, Service Transition, Service Operation and Continual Service Improvement. Each one of this volumes share the same conceptual structure, being composed by practice fundamentals and principles, life cycle processes and activities, supporting organization structures and roles, technology considerations, practice implementation and challenges, risks and critical success factors.\par
+The ITIL service management practices are comprised of three main sets of products and services. The core set, and the one we will consider for this project, consists of six publications: Introduction to ITIL Service Management Practices, Service Strategy, Service Design, Service Transition, Service Operation and Continual Service Improvement. Each one of these volumes share the same conceptual structure, being composed by practice fundamentals and principles, life cycle processes and activities, supporting organization structures and roles, technology considerations, practice implementation and challenges, risks and critical success factors.\par
 
 \subsubsection{Service Strategy} 
 
@@ -292,7 +292,7 @@ ISO/IEC 27000\cite{ISO27000} is a family of international standards related to I
 
 This family of standards is commonly used by organizations to implement frameworks for managing information security, protecting important assets as financial data or customers' details. Information security is one of the main concerns on any organization, because leaks or losses can have severe consequences for the overall organization.\par
 International standards as ISO 31000 and ISO 19011 are also related to this family of standards, making risk management and auditing management, respectively, areas that have direct impact on information security management systems. Dealing with information security is impossible without considering risk. The overall ISMS need to take account processes for risk identification, treatment and assessment for establishing a secure management system. Furthermore, and also related to risk, ISMS need to consider auditing management as a way to ensure information security and its correct management.\par
-This standard will be important for our project considering we will deal with processes that consume and produce information, and all information is an important asset for any organization implement this processes, making this standard fundamental to establish an information security management system.\par
+This standard will be important for our project considering we will deal with processes that consume and produce information, and all information is an important asset for any organization implement these processes, making this standard fundamental to establish an information security management system.\par
 
 
 \subsection{ISO 31000}
@@ -325,8 +325,8 @@ In Appendix A.3 it is presented the process flow for the management of an audit 
 
 \section{A State of the Art in Market Solutions}
 
-Considering we are interested in developing a logical application architecture, we need to analyze solutions available on the market to compose this architecture. This solutions should be evaluated accordingly with its importance and benefit for project's purposes.\par
-Considering this two areas of interest for this project, we will perform an analysis of the solutions available on the market for Project and Portfolio Management (PPM) and for IT Service Support Management (ITSM) tools. There are hundreds of solutions available for both tools, so we need to find mechanisms for narrowing and evaluating some of them fairly and taking in account its functionalities and benefits for this project. Thus, we will use researches performed in this areas by Gartner and Forrester, two companies focused on IT research and advisory. Both companies provide techniques to evaluate PPM and ITSM tools, providing us the necessary information to evaluate the market offers and perform a usage proposal based on this results.\par
+Considering we are interested in developing a logical application architecture, we need to analyze solutions available on the market to compose this architecture. These solutions should be evaluated accordingly with its importance and benefit for project's purposes.\par
+Considering these two areas of interest for this project, we will perform an analysis of the solutions available on the market for Project and Portfolio Management (PPM) and for IT Service Support Management (ITSM) tools. There are hundreds of solutions available for both tools, so we need to find mechanisms for narrowing and evaluating some of them fairly and taking in account its functionalities and benefits for this project. Thus, we will use researches performed in these areas by Gartner and Forrester, two companies focused on IT research and advisory. Both companies provide techniques to evaluate PPM and ITSM tools, providing us the necessary information to evaluate the market offers and perform a usage proposal based on these results.\par
 
 \subsection{Research Methodologies}
 
@@ -362,7 +362,7 @@ This methodology offers better benefits when applied in line with the Magic Quad
 \subsubsection{Forrester Wave Methodology}
 
 This methodology\cite{ForresterWave} is provided by Forrester to evaluate providers in Software, Hardware or Service markets, presenting the criteria and the weights for this evaluation. This methodology is transparent for the client, being only based in criteria's weighting performed by Forrester's research professionals. In addition, all the methodology's process and participants are presented, making clear how the evaluation was conducted.\par
-We will present, for the PPM an ITSM tools, the corresponding Forrester Wave reports, complementing the Gartner's evaluation and making our analysis for this tools more valuable and rich.\par 
+We will present, for the PPM an ITSM tools, the corresponding Forrester Wave reports, complementing the Gartner's evaluation and making our analysis for these tools more valuable and rich.\par 
 
 \subsection{Project and Portfolio Management Tools analysis}
 
@@ -371,7 +371,7 @@ To perform our analysis on available market solutions for Project and Portfolio 
 \subsubsection{Gartner Magic Quadrant for IT Project and Portfolio Management (June 2010)}
 
 This Magic Quadrant was the last one published in this area by Gartner, due to the innovations and new requirements for Cloud-based solutions presented in Gartner Magic Quadrant for Cloud-Based IT Project and Portfolio Management Services\cite{magicQuadrantCloud}.
-Gartner defines a set of main functionalities each PPM solution's provider must implement to fulfill the market's needs. This functionalities are defined in \cite{magicQuadrantPPM}:
+Gartner defines a set of main functionalities each PPM solution's provider must implement to fulfill the market's needs. These functionalities are defined in \cite{magicQuadrantPPM}:
 
 \begin{itemize}
 \item \textbf{IT PPM} - Support to Internal IT Project and Portfolio Management.
@@ -394,7 +394,7 @@ In Figure 10 we have the Magic Quadrant for IT Project and Portfolio Management 
 
 For this Magic Quadrant, based on our project objectives, we will consider only the quadrant for the Leaders taking in account we are looking for the most complete solution on all PPM market areas. The Leaders' quadrant presents a full coverage of the core areas considered by Gartner the most important in PPM. From the results shown in \cite{magicQuadrantPPM}, we choose this quadrant taking in account that all PPM areas are addressed, while Challengers' quadrant lacks of coverage's depth in some of them.\par
 Leaders also offer flexible deployment solutions, some of them presenting already Cloud-Based solutions. This is specially important when considering the new requirements PPM market is facing over the recent years, in new deployment options to suit clients' needs.\par
-The Leaders quadrant is composed by Planview with the product Planview Enterprise, Compuware with ChangePoint, CA with CA Clarity EPM, HP with HP PPM Center, Microsoft with EPM and Oracle with Primavera. In \cite{magicQuadrantPPM} is presented the main strengths and cautions for each one of this solutions, based on Gartner's analysis.\par
+The Leaders quadrant is composed by Planview with the product Planview Enterprise, Compuware with ChangePoint, CA with CA Clarity EPM, HP with HP PPM Center, Microsoft with EPM and Oracle with Primavera. In \cite{magicQuadrantPPM} is presented the main strengths and cautions for each one of these solutions, based on Gartner's analysis.\par
 
 
 \subsubsection{The Forrester Wave: Project/Program Portfolio Management, Q4 2012}
