--- a/sections/architecture.tex
+++ b/sections/architecture.tex
@@ -15,8 +15,8 @@ As long as this project is aligned with a real-case scenario for an organization
 
 The real-case organization scenario will provide constraints and assumptions for this project, made available by the organization's stakeholders. Being so, some design decisions were made considering specific requirements from this scenario.\par
 We are dealing with an organization from the utilities sector of Business (Energy), composed by a unique administration for Applications (software) area. This administration will receive two types of requests: project execution and evolutive maintenance requests.\par
-Considering the stakeholders for this project, we have two types: Internal and External. Considering internal stakeholders, we have the Business area, composed by the organization administration (Sponsor of this project), the financial and logistic departments, and the Technology area, composed by the Information Systems department (Project execution and Maintenance departments). Considering the external stakeholders, we have the third-parties responsible for project implementation, suppliers, consumers and regulatory entities.\par
-Project Execution department will outsource project implementation to a third-party but internally will maintain processes for project management, independent from the third-party. Evolutive maintenance requests are filtered by a Help-Desk service, wherefore only the major changes requests arrive to the evolutive maintenance department.\par
+Considering the stakeholders for this project, we have two types: Internal and External. Considering internal stakeholders, we have the Business area, composed by the organization's administration (Sponsor of this project), the financial and logistic departments, and the Technology area, composed by the information systems department (Project execution and maintenance departments). Considering the external stakeholders, we have the third-parties responsible for project implementation, suppliers, consumers and regulatory entities.\par
+Project execution department will outsource project implementation to a third-party but internally will maintain processes for project management, independent from the third-party. Evolutive maintenance requests are filtered by a Help-Desk service, wherefore only the major changes requests arrive to the evolutive maintenance department.\par
 A project only enters in production phase after approval from the maintenance department. When in production phase, project belongs to the maintenance department. It can, accordingly with a strategical plan previously defined, outsource the maintenance's implementation, being only responsible for its management.\par
 This real-case scenario will allow us to extract some requirements and also take design decisions accordingly to organization's stakeholders' needs and concerns, deciding which processes must be included in the processes architecture and the ones we should not focus, to reduce unnecessary complexity.\par
 
@@ -25,16 +25,16 @@ This real-case scenario will allow us to extract some requirements and also take
 
 Taking as reference ISO/IEC 12207, detailed in section 5.1, that standardizes the processes for the whole life cycle of software, we will present the areas we will address in our processes architecture and the reasons for not considering others.\par
 The two main processes areas we can address are governance and management processes. Considering the extensibility of both, we could not focus on the two, giving the time-frame available. Being so, we decided, accordingly with the stakeholders, to not detail governance processes. This type of processes need maturation and organization's insight, being too much complex in the scope of this project. Areas as organization strategy or project portfolio will not be addressed.\par 
-Despite this, there are governance processes that will have direct influence on the subjects covered by this project, namely risk, budget and quality management. These subjects will be addressed considering a more operational approach, assuming that organization's strategy for this areas is already defined, being our mission design processes that implement it in practice.\par
+Despite this, there are governance processes that will have direct influence on the subjects covered by this project, namely risk, budget and quality management. These subjects will be addressed considering a more operational approach, assuming that organization's strategy for these areas is already defined, being our mission design processes that implement it in practice.\par
 We are considering the use of BPMN 2.0 (Business Process Model and Notation) for processes modeling. It provides a graphical representation for specifying business processes, being the standard for business processes modeling. Due to its large adoption by organizations for business processes' specification, it is the best option for designing a processes architecture. \par
 
 
 \subsubsection{Processes definition}
 
-Using an interview approach with the organization's stakeholders for a more deeper analysis on the problem scope, we defined the areas of interest we need to cover. This areas can change during project execution phases, since requirements are volatile and can be changed. Also, more areas can be covered in the future, if we consider it brings an added value for this architecture.\par
+Using an interview approach with the organization's stakeholders for a more deeper analysis on the problem scope, we defined the areas of interest we need to cover. These areas can change during project execution phases, since requirements are volatile and can be changed. Also, more areas can be covered in the future, if we consider it brings an added value for this architecture.\par
 In Figure 18 we can observe the processes of interest for this project highlighted from the ISO/IEC 12207 international standard. As explained before, processes directly related to governance areas are not considered for this project due to its increased complexity. As consequence, Agreement processes and Organizational Project-Enabling processes are outside the scope for this project.\par
 Technical Processes and Software Implementation processes are also not considered in the scope, based on the requirements presented by the stakeholders and the organization scenario provided. As stated in section 7.1, we will assume these processes will be either outsourced, or managed by the organization according to already defined processes for that purpose.\par
-Software Reuse Processes are also outside the scope of this project. It is a shared opinion of stakeholders that this processes are not related to this project's problem and would only increase its complexity without adding any value.\par
+Software Reuse Processes are also outside the scope of this project. It is a shared opinion of stakeholders that these processes are not related to this project's problem and would only increase its complexity without adding any value.\par
 The processes we will address in detail are the Project processes and the Software Support processes, directly related to project and maintenance management. It constitutes the core of this project and is fundamental for establishing the proposed processes architecture.\par
 Regarding Project processes, and accordingly to the concerns extracted from the stakeholders' interview, we will consider all processes with exception of configuration management process and measurement process, that are not in the scope of interest for this particular project. Considering Software Support Processes, we will only address the Software Configuration Management process and the Software Validation process.\par
 
@@ -50,8 +50,8 @@ Capacity Management, as stated in \cite{itilSD}, \textit{``ensure that cost-just
 The main areas are Business Capacity Management (requirements for service and IT infrastructure), Service Capacity Management (performance and capacity management of IT services operation) and Component Capacity Management (performance, capacity and utilization management of individual IT technology components).\par
 Issues Management is the process of identifying and resolving issues, as staff, suppliers, technical or material problems. Many times confused with risks, they can arise from project processes with no warning or no expectation at all. Most organizations find difficult to manage issues from an effectively manner and many times it a process that is not implemented across the complete organization, making more difficult its resolution.\par
 Financial Management, as stated in \cite{itilSS}, \textit{``provides the business and IT with the quantification, in financial terms, of the value of IT Services, the value of the assets underlying the provisioning of those services, and the qualification of operational forecasting''}. Core areas for IT Financial Management are Budgeting (Expenditures planning and controlling), IT accounting (Cost analysis on IT services providing) and Charging (Costs assignment to IT services provided). Financial Management is a complex area and we need a more deeper analysis on its importance for our architecture, in order to remove unnecessary complexity.\par
-Documentation Management corresponds to an area that deals with all documentation concerns on an organization, from technical to project management documentation. This area groups processes for plan, production, tracking and communication of documents produced by the organization in project and maintenance contexts. This processes are also related to the supporting artifacts we want to develop.\par
-In Table 2 we present the processes we will consider for this project and a description of some activities each process implements.
+Documentation Management corresponds to an area that deals with all documentation concerns on an organization, from technical to project management documentation. This area groups processes for plan, production, tracking and communication of documents produced by the organization in project and maintenance contexts. These processes are also related to the supporting artifacts we want to develop.\par
+In Table 1 we present the processes we will consider for this project and a description of some activities each process implements.
 
 \begin{table}[h!]
 \centering
@@ -81,7 +81,7 @@ In Table 2 we present the processes we will consider for this project and a desc
 \subsubsection{Processes Mapping to frameworks}
 
 In this section we will present how each one of the processes in the scope for this project is addressed and mapped into the frameworks and standards presented in section 4 and 5. This will provide us an initial guidance on how we should approach the problem, analyzing what objectives are already covered by the frameworks and which ones need more original work.\par
-Our objective is to use only the important knowledge from sections 4 and 5 for this project, reducing the complexity of implementing a complete framework for the organization. In Table 3 we present the mapping between each processes group in the scope for this project with the framework or standard that covers some aspects for it:\par
+Our objective is to use only the important knowledge from sections 4 and 5 for this project, reducing the complexity of implementing a complete framework for the organization. In Table 2 we present the mapping between each processes group in the scope for this project with the framework or standard that covers some aspects for it:\par
 
 \begin{table}[h!]
 \centering
@@ -110,8 +110,8 @@ Our objective is to use only the important knowledge from sections 4 and 5 for t
 
 \subsubsection{Processes Supporting artifacts}
 
-Considering the processes architecture we want to develop, we need some artifacts to support this processes, namely communication and decisions artifacts that will allow us to support the activities' inputs and outputs. For this, we will identify all artifacts needed, clearly defining its purpose, content and participants.\par
-This artifacts will be defined during the designing of the processes architecture. The frameworks and standards previously presented define some of them, being our work to address new artifacts that are not already covered and adapt others to better suit to our objectives.\par
+Considering the processes architecture we want to develop, we need some artifacts to support these processes, namely communication and decisions artifacts that will allow us to support the activities' inputs and outputs. For this, we will identify all artifacts needed, clearly defining its purpose, content and participants.\par
+These artifacts will be defined during the designing of the processes architecture. The frameworks and standards previously presented define some of them, being our work to address new artifacts that are not already covered and adapt others to better suit to our objectives.\par
 
 \subsubsection{Responsibility Structure}
 
@@ -128,7 +128,7 @@ In this section we will present the solutions we consider the best for our objec
 \subsubsection{PPM Tools}
 
 For PPM solutions, that we evaluate in section 6.2, we used the Gartner Magic Quadrant and the Forrester Wave methodologies for evaluation.\par
-In Magic Quadrant results, that performs an evaluation of the PPM solutions' providers adequacy to the market, we will just consider the leaders quadrant, composed by Planview, Compuware, CA, HP, Oracle and Microsoft. Planview and CA are the suppliers with the best results but are closely followed by the rest. A deeper analysis on strengths and cautions presented by Gartner for each one of this solutions is presented in \cite{magicQuadrantPPM}.\par
+In Magic Quadrant results, that performs an evaluation of the PPM solutions' providers adequacy to the market, we will just consider the leaders quadrant, composed by Planview, Compuware, CA, HP, Oracle and Microsoft. Planview and CA are the suppliers with the best results but are closely followed by the rest. A deeper analysis on strengths and cautions presented by Gartner for each one of these solutions is presented in \cite{magicQuadrantPPM}.\par
 For the Forrester Wave results, that evaluates providers by criteria and respective weightings, we will consider the two models explained in section 6.2.2, the above-the-line and below-the-line. For the first one, the leaders quadrant is composed by Planview, CA Technologies, HP and Daptiv. All presents good results but is CA Technologies who is the most complete provider, in terms of current offering, strategy and market presence. Other providers present better results in some of this criteria but are substantially worse in others. For the below-the-line evaluation, we have CA Technologies and Planview very close to each other and HP with an excellent result in strategy criteria. Microsoft, Rally and Daptiv are also part of the leaders, but with results slightly worse.\par
 In Table 3 we can observe the PPM Tools Evaluation results. In green we have the solutions we consider the best for this project taking in account the evaluation results. We also present the alternatives in orange. CA Technologies with CA Clarity PPM, Planview with Planview Enterprise and HP with HP PPM Center are the solutions we will purpose for the PPM Tool to consider for this project.
 
@@ -164,7 +164,7 @@ In Table 3 we can observe the PPM Tools Evaluation results. In green we have the
 \subsubsection{ITSM Tools}
 
 For ITSM solutions, that we evaluated in section 6.3, we used the Magic Quadrant , the Critical Capabilities and the Forrester Wave methodologies for evaluation.\par
-In Magic Quadrant results we will just consider the leaders and challengers quadrants, composed by ServiceNow and BMC Software for the leaders and Cherwell and CA Technologies for challengers. ServiceNow is the best provider in terms of ability to execute with some advantage to concurrency but really close of BMC Software in terms of completeness of vision. Cherwell Software and CA Technologies present a considering lower result for completeness of vision considering the leaders quadrant. A deeper analysis on strengths and cautions presented by Gartner for each one of this solutions is presented in \cite{magicQuadrantITSM}.\par
+In Magic Quadrant results we will just consider the leaders and challengers quadrants, composed by ServiceNow and BMC Software for the leaders and Cherwell and CA Technologies for challengers. ServiceNow is the best provider in terms of ability to execute with some advantage to concurrency but really close of BMC Software in terms of completeness of vision. Cherwell Software and CA Technologies present a considering lower result for completeness of vision considering the leaders quadrant. A deeper analysis on strengths and cautions presented by Gartner for each one of these solutions is presented in \cite{magicQuadrantITSM}.\par
 In Critical Capabilities results, we will only consider the High-Maturity, Digital Workplace and Total ITSM Use Cases, the ones that are more adequate to our objectives and to the organization's scenario. We will also only consider the solutions provided by the suppliers in the leaders and challengers quadrants presented by Gartner. In all the use cases considered, BMC Remedy ITSM Suite and ServiceNow IT Service Automation suite have the higher scores, being followed by some distance by CA Service Management and Cherwell Software Service Management.\par
 For the Forrester Wave results, we have Cherwell Software and Service Now as the leaders, very close to each other and with a very good result in terms of market presence. BMC Software and CA Technologies are considered Strong Performers, but at some distance of the other two. Forrester establishes big differences between the two leaders providers and the two strong contenders in terms of the three criteria considered.\par
 In Table 4 we can observe the ITSM Tools Evaluation results. In green we have the solution we consider the best for this project taking in account the evaluation results. ServiceNow with ServiceNow IT Service Automation is the solution we will purpose for the ITSM Tool to consider for this project. We also present other alternatives in orange. It should be taken special attention to CA Technologies tool as alternative solution if we consider the CA Technologies PPM tool due to easier integration between the PPM and ITSM tools.\par
