--- a/sections/problem-contextualization.tex
+++ b/sections/problem-contextualization.tex
@@ -11,7 +11,7 @@ Dealing and managing project execution and evolving maintenance requests has bec
 When a request is submitted to the information systems management, it should be classified as a project request or an evolutive maintenance. Furthermore, the organization should have defined processes to manage the whole process for request fulfillment, defining activities, expected results and responsibilities, independently of the request type.\par
 The request's classification will depend on many factors. We can decide it by taking in account aspects like the risk to the business or the financial impact for the organization. In the end, it depends on aspects the organization defines as the ones which makes the distinction between a project request or evolutive maintenance.\par
 After classified, we need to define the request solution in terms of processes to consider and communication channels between the project and the maintenance departments, assuming they are independent but need to be coordinated.\par
-Considering the software life cycle processes, presented by the International Standard ISO/IEC 12207\cite{ISO12207} analyzed in more detail in section 5.1, we can divide this processes in two groups: Software Specific Processes and System Context processes.\par
+Considering the software life cycle processes, presented by the International Standard ISO/IEC 12207\cite{ISO12207} analyzed in more detail in section 5.1, we can divide these processes in two groups: Software Specific Processes and System Context processes.\par
 The system context processes are more focused on systems' engineering, providing a system context for dealing with a standalone software product or service of a software system. The software specific processes are, on the other hand, used for implementing a software product or service that is an element of a larger system. \par 
 The main challenge of our problem is to identify and implement the necessary processes that are important for our objectives, defining activities and responsibilities for the requests' management and its solution.\par
 As long as we are dealing with an established organization in the market, we need to take in account that our processes will be implemented in an existent organizational structure. It is necessary to develop a logical application architecture, using market solutions from the area of Project Management and IT Service Support Management, that will be architecturally integrated to support our processes. We will need to assess the market solutions already available to conclude which are the best in terms of features and interest for the project. 
